Small fixes
* Remove redundant logging of tools' stderr output.
* Add logging of IOException stack in MediaController.
* Use a preview image in og:image to support posts with videos.
* Keep old events for 30 mins instead of 10 mins to support longer
  disconnections of clients.